kubernetes/webstore-k8s/webstore-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webstore
  namespace: jhipster
spec:
  replicas: 1
  selector:
    matchLabels:
      app: webstore
      version: "v1"
  template:
    metadata:
      labels:
        app: webstore
        version: "v1"
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - webstore
                topologyKey: kubernetes.io/hostname
              weight: 100
      containers:
        - name: webstore-app
          image: mounir/webstore
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - name: http
              containerPort: 9042
          readinessProbe:
            httpGet:
              path: /management/health/readiness
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /management/health/liveness
              port: http
            initialDelaySeconds: 120
