kubernetes/webstore-k8s/webstore-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webstore
  namespace: jhipster
  labels:
    app: webstore
spec:
  selector:
    app: webstore
  type: NodePort
  ports:
    - name: http
      port: 9042
